Development
-----------
- pmount: mount vfat with shortname=mixed option for better WinXP compatibility
- fix configure check to work with libsysfs versions 1.3 and 2.0
- pmount, pumount: do not link against dbus and hal libraries
- pmount, pumount: support --version argument

0.9.6
-----
- pmount-hal: support device argument
- pmount manpage: fix default mount options inconsistency
- pmount-hal: full support for HAL expored mount policy (including
  global and per-drive policy, and the "exec" option)
- autotoolized build system, thanks to Aaron Bockover
- pmount: fixed umask parsing, umask 000 works now
- pmount-hal: full support for storage devices to mount floppies and similar
  devices

0.9.5
-----
- pmount: Fix forgotten line break in debug output
- pmount: improve debugging of removability detection
- add README.devel with some VCS explanations
- pmount: atomically lock the mount point to avoid races with parallel
  pmount instances, and thus double-mounts to the same directory
- pmount-hal: gracefully handle pmount failures due to locked mount
  points
- pmount-hal: convert to use libhal-storage for better abstraction
- pmount-hal: if volume file system does not exist, fall back to
  storage file system
- pmount: Make read-only encrypted devices work; thanks to Sören
  Köpping for the patch
- updated translations with latest Rosetta data

0.9.4
-----
- policy.c: print out meaningful error message if compiling the
  regular expression fails
- policy.c: fix regular expression to work with all locales

0.9.3
-----
- pmount: close an already opened LUKS device if mount failed
- pmount: print a proper error message if mapped device already exists
- pmount: do not explicitly mount with "rw" or "ro" options since the
  default usually does the right thing
- pmount: add -r and -w switches

0.9.2
-----
- Switched version control to bazaar-ng (http://www.bazaar-ng.org);
  publicly accessible branch is at
  http://people.ubuntu.com/~pitti/bzr/pmount/