@@ -4,6 +4,7 @@ Development
 - fix configure check to work with libsysfs versions 1.3 and 2.0
 - pmount, pumount: do not link against dbus and hal libraries
 - pmount, pumount: support --version argument
+- pmount: automatically prepend /dev to device argument if it is missing
 
 0.9.6
 -----
